# compact-jwt

./: .gitignore  Cargo.toml  README.md  SECURITY.md  clippy.toml
.github/workflows/: rust_test.yml
src/: base64_data.rs  compact.rs  crypto.rs  dangernoverify.rs  error.rs  jwe.rs  jws.rs  jwt.rs  lib.rs  oidc.rs  traits.rs
src/crypto/: a128cbc_hs256.rs  a128gcm.rs  a128kw.rs  a256gcm.rs  a256kw.rs  ecdhes_a128kw.rs  ecdhes_a256kw.rs  es256.rs  hs256.rs  mod.rs  ms_oapxbc.rs  rs256.rs  rsaes_oaep.rs  tpm.rs  tpm_es256.rs  tpm_rs256.rs  x509.rs
