[package]
name = "compact_jwt"
version = "0.5.0-dev"
edition = "2021"
authors = ["William Brown <william@blackhats.net.au>"]
description = "Minimal implementation of JWT for OIDC and other applications"
repository = "https://github.com/kanidm/compact-jwt"
readme = "README.md"
keywords = ["jwt", "authentication", "jwe", "jws"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[features]
unsafe_release_without_verify = []
msextensions = []
default = []

[package.metadata.docs.rs]
all-features = true

[patch.crates-io]
# kanidm-hsm-crypto = { path = "../hsm-crypto" }
# crypto-glue = { path = "../crypto-glue" }

[dependencies]
serde = { version = "^1.0.136", features = ["derive"] }
serde_json = "^1.0.79"
base64 = "^0.21.5"
base64urlsafedata = "^0.5.1"

crypto-glue = "^0.1.4"
kanidm-hsm-crypto = "0.3.1"

url = { version = "^2.2.2", features = ["serde"] }
uuid = { version = "^1.0.0", features = ["serde"] }
tracing = "^0.1.34"
hex = "0.4"


[dev-dependencies]
tracing-subscriber = "^0.3.11"

[profile.dev.package.num-bigint-dig]
opt-level = 3
