[package]
name = "compact_jwt"
version = "0.5.4"
edition = "2021"
authors = ["William Brown <william@blackhats.net.au>"]
description = "Minimal implementation of JWT for OIDC and other applications"
repository = "https://github.com/kanidm/compact-jwt"
readme = "README.md"
keywords = ["jwt", "authentication", "jwe", "jws"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[features]
unsafe_release_without_verify = []
msextensions = []
default = []

[package.metadata.docs.rs]
all-features = true

[patch.crates-io]
# kanidm-hsm-crypto = { path = "../hsm-crypto" }
# crypto-glue = { path = "../crypto-glue" }

[dependencies]
base64 = "^0.22.1"
base64urlsafedata = "^0.5.1"
crypto-glue = "^0.1.12"
hex = "0.4"
kanidm-hsm-crypto = "^0.3.2"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.145"
time = { version = "0.3.44", features = ["macros", "parsing", "serde"] }
tracing = "^0.1.34"
url = { version = "^2.5.7", features = ["serde"] }
uuid = { version = "^1.19.0", features = ["serde"] }

[dev-dependencies]
tracing-subscriber = "^0.3.22"

[profile.dev.package.num-bigint-dig]
opt-level = 3
